[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Map/map_bg.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Map/MapScene.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Map/LevelButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/MainTheme.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0.368627 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0.368627 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0.368627 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0.368627 )

[node name="MapScene" type="Node2D"]
script = ExtResource( 2 )
level_button = ExtResource( 3 )

[node name="BG" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Levels" type="Node2D" parent="."]

[node name="LD" type="Node2D" parent="Levels"]

[node name="L0" type="Node2D" parent="Levels"]
position = Vector2( 108.353, 478.77 )

[node name="L1" type="Node2D" parent="Levels"]
position = Vector2( 204.107, 292.302 )

[node name="L2" type="Node2D" parent="Levels"]
position = Vector2( 307.421, 453.572 )

[node name="L3" type="Node2D" parent="Levels"]
position = Vector2( 340.179, 181.429 )

[node name="L4" type="Node2D" parent="Levels"]
position = Vector2( 511.528, 483.81 )

[node name="L5" type="Node2D" parent="Levels"]
position = Vector2( 635, 612.322 )

[node name="L6" type="Node2D" parent="Levels"]
position = Vector2( 758.473, 282.222 )

[node name="L7" type="Node2D" parent="Levels"]
position = Vector2( 894.544, 559.405 )

[node name="L8" type="Node2D" parent="Levels"]
position = Vector2( 1086.05, 345.218 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 1279.0
margin_bottom = 718.0
mouse_filter = 2
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="HUD"]
margin_left = 13.0
margin_top = 11.0
margin_right = 97.0
margin_bottom = 48.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mask" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -51.0
margin_top = -28.0
margin_right = 1303.0
margin_bottom = 756.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetailPanel" type="Panel" parent="."]
margin_left = 316.757
margin_top = 72.4142
margin_right = 985.757
margin_bottom = 620.414
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="DetailPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -289.681
margin_top = 31.0
margin_right = 285.319
margin_bottom = 74.0
rect_pivot_offset = Vector2( 6.25, 0 )
text = "City Hospital"
align = 1
autowrap = true

[node name="Desc" type="Label" parent="DetailPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -262.02
margin_top = 83.9207
margin_right = 260.98
margin_bottom = 393.921
rect_pivot_offset = Vector2( 48.1407, 152.52 )
text = "City Hospital"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NG" type="Button" parent="DetailPanel"]
margin_left = 75.0
margin_top = 457.0
margin_right = 284.0
margin_bottom = 507.0
text = "Not Yet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="DetailPanel"]
margin_left = 379.0
margin_top = 453.0
margin_right = 607.0
margin_bottom = 503.0
text = "I'm Ready"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HUD/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="DetailPanel/NG" to="." method="_on_NG_pressed"]
[connection signal="pressed" from="DetailPanel/OK" to="." method="_on_OK_pressed"]
